[gd_scene load_steps=8 format=3 uid="uid://6a3e2qorovdl"]

[ext_resource type="FontFile" uid="uid://bkgdnmgv0l2df" path="res://assets/fonts/smallburg-Regular.ttf" id="1_vq62k"]
[ext_resource type="Script" uid="uid://dxbht7p60y810" path="res://UIs/MenuSettings/settings_menu.gd" id="1_yxs76"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycsa6"]
bg_color = Color(0.941176, 0.835294, 0.666667, 0.654902)
corner_radius_top_left = 12
corner_radius_bottom_right = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxs76"]
bg_color = Color(0.941176, 0.835294, 0.666667, 0.866667)
corner_radius_top_left = 12
corner_radius_bottom_right = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mesx6"]
bg_color = Color(0.941176, 0.835294, 0.666667, 0.654902)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_bottom_right = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ndg4"]
bg_color = Color(0.941176, 0.835294, 0.666667, 0.654902)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_bottom_right = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rsob"]
bg_color = Color(0.941176, 0.835294, 0.666667, 0.654902)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_bottom_right = 12

[node name="SettingsMenu" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yxs76")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1272.0
offset_bottom = 712.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ycsa6")

[node name="MenuTitle" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 56.0
offset_top = 16.0
offset_right = 1208.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_vq62k")
theme_override_font_sizes/font_size = 45
text = "Menu de configuracion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 56.0
offset_top = 79.0
offset_right = 1208.0
offset_bottom = 336.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yxs76")

[node name="SoundsSettings" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 1152.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_vq62k")
theme_override_font_sizes/font_size = 40
text = "Volumen"
vertical_alignment = 1

[node name="MusicRow" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 0
offset_left = 16.0
offset_top = 70.0
offset_right = 1144.0
offset_bottom = 133.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mesx6")

[node name="Music" type="Label" parent="Panel/VBoxContainer/MusicRow"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_vq62k")
theme_override_font_sizes/font_size = 30
text = "Musica"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSliderMusic" type="HSlider" parent="Panel/VBoxContainer/MusicRow"]
layout_mode = 0
offset_left = 201.0
offset_top = -1.0
offset_right = 513.0
offset_bottom = 63.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="SfxRow" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 0
offset_left = 16.0
offset_top = 169.0
offset_right = 1144.0
offset_bottom = 249.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2ndg4")

[node name="SFX" type="Label" parent="Panel/VBoxContainer/SfxRow"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_vq62k")
theme_override_font_sizes/font_size = 25
text = "Efectos de sonido"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSliderSFX" type="HSlider" parent="Panel/VBoxContainer/SfxRow"]
layout_mode = 0
offset_left = 200.0
offset_right = 512.0
offset_bottom = 80.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 24.0
offset_right = 192.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_vq62k")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_0rsob")
text = "Volver"

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
